[package]
name = "medieval_call_of_duty"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12.1"
bevy_rapier3d = "0.23.0"
bevy_renet = { version = "0.0.10", features = ["serde"] }
bevy_asset_loader = "0.19.1"
bevy_fps_controller = "0.2.4"
serde = { version = "1.0.194", features = ["derive"] }
bincode = "1.3.3"
